--- a/market/templates/market/cart.html
+++ b/market/templates/market/cart.html
@@ -1,66 +1,80 @@
-{% extends "market/layout.html" %}
-{% block content %}
+{% extends "market/layout.html" %} {% block content %}
 <div class="row rtl farsi">
-    <div class="col-md-12">
-        <h6 class="text-center">
-            سبد خرید
-        </h6>
+  <div class="col-md-12">
+    <h6 class="text-center">سبد خرید</h6>
 
-        <h6 class="text-center">
-            مشتری :
-            <a href="{{customer.get_absolute_url}}">
-                {{customer.title}}
-            </a>
+    <h6 class="text-center">
+      مشتری :
+      <a href="{{customer.get_absolute_url}}"> {{customer.title}} </a>
+    </h6>
+  </div>
 
-        </h6>
-    </div>
-
-    <div class="col-md-12 ">
-        {% include "market/includes/cart-items-app/template.html" %}
-    </div>
-    {% if checkout_cart_form %}
-    <div class="col-md-12">
-        <div class="card" id="checkout-cart-app">
-            <div class="card-body">
-                <button @click="checkout_cart({{customer.id}})" class="btn btn-info">checkout</button>
+  <div class="col-md-12">
+    {% include "market/includes/cart-items-app/template.html" %}
+  </div>
+  {% if checkout_cart_form %}
+  <div class="col-md-12">
+    <div class="card" id="checkout-cart-app">
+      <div class="card-body">
+        <div class="row rtl">
+          <div class="col-md-12">
+            <div class="form-group">
+              <label for="">آدرس</label>
+              <input type="text" class="form-control" v-model="address" />
             </div>
+          </div>
+
+           <div class="col-md-12">
+            <div class="form-group">
+              <label for="">کد پستی</label>
+              <input type="text" class="form-control" v-model="postal_code" />
+            </div>
+          </div>
+
         </div>
+        <div class="col-md-12">
+          {% include "utility/includes/message-app/alert.html" %}
+        </div>
+        <button @click="checkout_cart()" class="btn btn-info">
+          checkout
+        </button>
+      </div>
     </div>
-    {% endif %}
-
-
+  </div>
+  {% endif %}
 </div>
-{% endblock content %}
-
-{% block script %}
-{% if checkout_cart_form %}
+{% endblock content %} {% block script %} {% if checkout_cart_form %}
 
 <script>
+  let checkout_cart_app = new Vue({
+    el: "#checkout-cart-app",
+    data: {
+      address: `{{customer.person_account.peron.address}}`,
+      postal_code: `{{customer.person_account.peron.postal_code}}`,
+      message:{show:false},
+      waiting:false,
+    },
+    methods: {
+      checkout_cart: function () {
+        let payload = { 
+          address: this.address,
+          postal_code: this.postal_code,
+          csrfmiddlewaretoken: csrfmiddlewaretoken,
+        };
+        console.log(payload);
+        let url = "{% url 'market:checkout_cart' %}";
+        $.post(url, payload).done((data) => {
+          if(data.result==="SUCCEED"){
+            show_message(checkout_cart_app,'موفق',data.message,'success',10000)
+          }
+          else{
 
-
-    let checkout_cart_app = new Vue({
-        el: "#checkout-cart-app",
-        data: {
-
-        },
-        methods: {
-            checkout_cart: function (customer_id) {
-                let payload = {
-                    customer_id: customer_id,
-                    csrfmiddlewaretoken: csrfmiddlewaretoken,
-                }
-                console.log(payload)
-                let url = "{% url 'market:checkout_cart' %}"
-                $.post(url, payload).done(data => {
-                    console.log(data)
-                })
-            }
-        }
-    })
-
+            show_message(checkout_cart_app,'خطا',data.message,'danger',3000)
+          }
+        });
+      },
+    },
+  });
 </script>
-{% endif %}
-
-{% include "market/includes/cart-items-app/script.html" %}
-
+{% endif %} {% include "market/includes/cart-items-app/script.html" %} 
 {% endblock script %}
