--- a/transport/templates/transport/includes/add-vehicle-app/script.html
+++ b/transport/templates/transport/includes/add-vehicle-app/script.html
@@ -1,23 +1,24 @@
- {% include "authentication/includes/person-app/select-script.html" %}
+ {% include "accounting/includes/person-account-app/select-script.html" %}
 <script>
   let add_vehicle_app = new Vue({
     el: "#add-vehicle-app",
     data: {
       title: "",
-      owner: { id: 0, full_name: false },
+      owner_code:"",
+      owner: { },
       message:{show:false},
       waiting:false,
     },
     methods: {
       select_owner: function () {
-        select_person_by_id(add_vehicle_app.owner.id).done((data) => {
+        select_person_account_by_code(add_vehicle_app.owner_code).done((data) => {
           if (data.result === "SUCCEED") {
-            leolog(data.person);
-            add_vehicle_app.owner = data.person;
+            leolog(data.person_account);
+            add_vehicle_app.owner = data.person_account;
           }
 
           if (data.result === "FAILED") {
-            add_vehicle_app.owner.full_name = "";
+            add_vehicle_app.owner={};
           }
         });
       },
@@ -42,9 +43,10 @@
             if (typeof vehicles_app != "undefined") {
               vehicles_app.vehicles.push(data.vehicle);
             }
+            show_message(add_vehicle_app,'موفق',data.message,'success',3000)
           }
           else{
-            show_message(add_vehicle_app,'موفق',data.message,'danger',3000)
+            show_message(add_vehicle_app,'خطا',data.message,'danger',3000)
           }
         });
       },
