--- a/transport/templates/transport/includes/service-mans-app/template.html
+++ b/transport/templates/transport/includes/service-mans-app/template.html
@@ -30,8 +30,8 @@
         <div class="table-responsive">
           <table class="table table-striped rtl">
             <thead>
-              <th>مشتری</th>
-              <th>سطح</th>
+              <th>سرویس کار</th>
+              <th>حساب</th>
               <th>مانده</th>
               <th></th>
             </thead>
@@ -46,8 +46,23 @@
                 </td>
 
                 <td>
-                  <span v-text="service_man.level"></span>
+
+                  <div class="media">
+                    <a :href="service_man.person_account.get_absolute_url">
+                      <img :src="service_man.person_account.logo" width="48" class="rounded-circle" alt="">
+                    </a>
+                    <div class="media-body mr-2">
+                      <a :href="service_man.person_account.get_absolute_url">
+                        <h6 v-text="service_man.person_account.name"></h6>
+                        <h6 v-text="service_man.person_account.code"></h6>
+                      </a>
+                    </div>
+                  </div>
+
+                  
                 </td>
+
+                
 
                 <td>
                   <span v-text="to_price(service_man.person_account.balance)"></span> {{CURRENCY    }}
