--- a/utility/templates/utility/search.html
+++ b/utility/templates/utility/search.html
@@ -1,14 +1,22 @@
-{% extends "accounting/layout.html" %}
+{% extends "utility/layout.html" %}
 {% load static %}
 
 {% block content %}
 <div class="row rtl" id="selection-app">
 
+    {% if persons %}
+    <div class="col-md-12">
+        {% include "authentication/includes/persons-app/template.html" %}
+    </div>
+    {% endif %}
+
+    
     {% if accounts %}
     <div class="col-md-12">
         {% include "accounting/includes/accounts-app/template.html" %}
     </div>
     {% endif %}
+
 
 
     {% if products %}
@@ -77,6 +85,9 @@
 {% endif %}
 
 
+    {% if persons %}
+        {% include "authentication/includes/persons-app/script.html" %}
+    {% endif %}
 <script>
     let log = '{{log}}'
     let WAS_FOUND = '{{WAS_FOUND}}'
