--- a/accounting/templates/accounting/includes/person-account-app/category.html
+++ b/accounting/templates/accounting/includes/person-account-app/category.html
@@ -5,7 +5,7 @@
 {% load to_price_color_btn %}
 <div class="card rtl text-right">
     <div class="card-header">
-
+<h6>دسته بندی شخص</h6>
     </div>
     <div class="card-body">
         <a href="{{person_account.person_category.get_absolute_url}}">
