--- a/accounting/templates/accounting/account.html
+++ b/accounting/templates/accounting/account.html
@@ -29,15 +29,23 @@
     <div class="col-md-12">
         {% include "attachments/includes/comments-app/template.html" %}
     </div>
+
+    <div class="col-md-12">
+        {% include "accounting/includes/financial-events-app/template.html" %}
+    </div>
+
     <div class="col-md-4">
         {% include "attachments/includes/links-app/template.html" %}
     </div>
+
     <div class="col-md-4">
         {% include "attachments/includes/downloads-app/template.html" %}
     </div>
+
     <div class="col-md-4">
         {% include "attachments/includes/tags-app/template.html" %}
     </div>
+
     <div class="col-md-12">
         {% include "attachments/includes/images-app/template.html" %}
     </div>
@@ -46,17 +54,12 @@
         {% include "accounting/includes/financial-events-app/template.html" %}
 
     </div>
+
     {% if add_financial_document_line_form %}
-     
     <div class="col-md-12">
         {% include "accounting/includes/add-financial-document-line-app/template.html" %}
     </div>
-  
     {% endif %}
-
- 
-
-
 </div>
 {% endblock content %}
 
