--- a/accounting/templates/accounting/bank-account.html
+++ b/accounting/templates/accounting/bank-account.html
@@ -16,16 +16,17 @@
     </div>
 
     <div class="col-md-12">
-        {% include "accounting/includes/financial-events-app/template.html" %}
+        {% include "accounting/includes/accounts-app/template.html" %}
     </div>
-
-    
 
     <div class="col-md-12">
         {% include "accounting/includes/financial-document-lines-app/template.html" %}
     </div>
 
-    
+    <div class="col-md-12">
+        {% include "accounting/includes/add-account-app/template.html" %}
+    </div>
+
     {% if add_financial_document_line_form %}
      
     <div class="col-md-12">
@@ -34,13 +35,26 @@
   
     {% endif %}
      
-    
+    {% if add_person_account_form %}
+     
+    <div class="col-md-12">
+        {% include "accounting/includes/add-person-account-app/template.html" %}
+    </div>
+  
+    {% endif %}
 
 </div>
 {% endblock content %}
 
 
 {% block script %}
-{% include "accounting/includes/person-account-app/script.html" %}  
+{% include "accounting/includes/account-app/script.html" %}
+{% include "accounting/includes/accounts-app/script.html" %}
+{% include "accounting/includes/add-account-app/script.html" %}
+{% include "accounting/includes/financial-document-lines-app/script.html" %}
+ 
+{% if add_person_account_form %}
+{% include "accounting/includes/add-person-account-app/script.html" %}
+{% endif %}
 
 {% endblock script %}
