--- a/accounting/templates/accounting/includes/person-accounts-app/template.html
+++ b/accounting/templates/accounting/includes/person-accounts-app/template.html
@@ -57,7 +57,7 @@
                                 </td>
 
                                  <td>
-                                    <a :href="person_account.person.get_absolute_url">
+                                    <a :href="person_account.person.get_accounting_absolute_url">
                                         <span   v-text="person_account.person.full_name"></span>
                                     </a>
 
