--- a/market/templates/market/includes/product-shops-app/script.html
+++ b/market/templates/market/includes/product-shops-app/script.html
@@ -15,7 +15,6 @@
       to_price: (vall) => to_price(vall),
 
       add_to_cart: function (shop) {
-        console.log(shop);
         comment_component.waiting = true;
 
         let url = "{% url 'market:add_cart_item' %}";
@@ -27,9 +26,11 @@
         let posting = $.post(url, payload);
         posting.done(function (data) {
           comment_component.waiting = false;
-          console.log(data);
           if (data.result === "SUCCEED") {
             show_message(product_shops_app,'موفق',data.message,'success',3000)
+            if(typeof cart_items_navbar_app !='undefined'){
+              cart_items_navbar_app.cart_items=(data.cart_items)
+            }
           }
           else{
             show_message(product_shops_app,'خطا',data.message,'danger',3000)
