--- a/accounting/templates/accounting/includes/add-person-category-app/template.html
+++ b/accounting/templates/accounting/includes/add-person-category-app/template.html
@@ -9,7 +9,7 @@
           aria-expanded="true"
           aria-controls="collapse-add-person-category"
         >
-          افزودن حساب شخص
+          افزودن دسته بندی حساب اشخاص
         </button>
       </h5>
     </div>
@@ -25,7 +25,7 @@
             <div class="col-md-6">
               <div class="form-group">
                 <label for=""
-                  >کد حساب
+                  >کد حساب والد
 
                   <a href="{% url 'accounting:accounts' %}" target="_blank"
                     >همه حساب ها</a
