--- a/accounting/templates/accounting/index.html
+++ b/accounting/templates/accounting/index.html
@@ -2,9 +2,48 @@
 {% load static %}
 {% block content %}
 <div class="row rtl farsi">
+
+    
+    <div class="col-6 col-md-3 col-lg-2 text-center my-3">
+        <a href="{% url 'accounting:products'  %}">
+            <img src="{% static 'accounting/img/product.png' %}" width="64em" class="mb-2" alt="">
+            <h6 class="text-center">
+                کالا ها
+            </h6>
+        </a>
+    </div>
+
+    <div class="col-6 col-md-3 col-lg-2 text-center my-3">
+        <a href="{% url 'accounting:categories' %}">
+            <img src="{% static 'accounting/img/categories.png' %}" width="64em" class="mb-2" alt="">
+            <h6 class="text-center">
+            دسته بندی کالا ها
+            </h6>
+        </a>
+    </div>
+
+
+    <div class="col-6 col-md-3 col-lg-2 text-center my-3">
+        <a href="{% url 'accounting:brands'  %}">
+            <img src="{% static 'accounting/img/brands.png' %}" width="64em" class="mb-2" alt="">
+            <h6 class="text-center">
+                برند ها
+            </h6>
+        </a>
+    </div>
+
+    <div class="col-6 col-md-3 col-lg-2 text-center my-3">
+        <a href="{% url 'accounting:services'  %}">
+            <img src="{% static 'accounting/img/pages/thumbnail/service.png' %}" width="64em" class="mb-2" alt="">
+            <h6 class="text-center">
+                خدمات
+            </h6>
+        </a>
+    </div>
+
     <div class="col-6 col-md-3 col-lg-2 text-center my-3">
         <a href="{% url 'accounting:accounts' %}">
-            <img src="{% static 'core/img/logo.png' %}" width="64em" class="mb-2" alt="">
+            <img src="{% static 'accounting/img/account.png' %}" width="64em" class="mb-2" alt="">
             <h6 class="text-center">
                 حساب ها
             </h6>
@@ -29,6 +68,16 @@
         </a>
     </div>
 
+    
+     <div class="col-6 col-md-3 col-lg-2 text-center my-3">
+        <a href="{% url 'accounting:banks' %}">
+            <img src="{% static 'accounting/img/bank.png' %}" width="64em" class="mb-2" alt="">
+            <h6 class="text-center">
+                بانک ها
+            </h6>
+        </a>
+    </div>
+
      <div class="col-6 col-md-3 col-lg-2 text-center my-3">
         <a href="{% url 'accounting:bank_accounts' %}">
             <img src="{% static 'core/img/logo.png' %}" width="64em" class="mb-2" alt="">
@@ -37,19 +86,11 @@
             </h6>
         </a>
     </div>
-     <div class="col-6 col-md-3 col-lg-2 text-center my-3">
-        <a href="{% url 'accounting:banks' %}">
-            <img src="{% static 'core/img/logo.png' %}" width="64em" class="mb-2" alt="">
-            <h6 class="text-center">
-                بانک ها
-            </h6>
-        </a>
-    </div>
 
     
     <div class="col-6 col-md-3 col-lg-2 text-center my-3">
         <a href="{% url 'accounting:assets' %}">
-            <img src="{% static 'core/img/logo.png' %}" width="64em" class="mb-2" alt="">
+            <img src="{% static 'accounting/img/asset.png' %}" width="64em" class="mb-2" alt="">
             <h6 class="text-center">
                     دارایی ها
             </h6>
@@ -59,61 +100,26 @@
 
     <div class="col-6 col-md-3 col-lg-2 text-center my-3">
         <a href="{% url 'accounting:tree_chart' pk=0 %}">
-            <img src="{% static 'core/img/logo.png' %}" width="64em" class="mb-2" alt="">
+            <img src="{% static 'accounting/img/tree.png' %}" width="64em" class="mb-2" alt="">
             <h6 class="text-center">
                 نمودار درختی
             </h6>
         </a>
     </div>
 
-    <div class="col-6 col-md-3 col-lg-2 text-center my-3">
-        <a href="{% url 'accounting:categories' %}">
-            <img src="{% static 'core/img/logo.png' %}" width="64em" class="mb-2" alt="">
-            <h6 class="text-center">
-            دسته بندی ها
-            </h6>
-        </a>
-    </div>
-
       <div class="col-6 col-md-3 col-lg-2 text-center my-3">
         <a href="{% url 'accounting:financial_documents' %}">
-            <img src="{% static 'core/img/logo.png' %}" width="64em" class="mb-2" alt="">
+            <img src="{% static 'accounting/img/financialdocument.png' %}" width="64em" class="mb-2" alt="">
             <h6 class="text-center">
                 اسناد مالی
             </h6>
         </a>
     </div>
 
-    <div class="col-6 col-md-3 col-lg-2 text-center my-3">
-        <a href="{% url 'accounting:products'  %}">
-            <img src="{% static 'accounting/img/product.png' %}" width="64em" class="mb-2" alt="">
-            <h6 class="text-center">
-                کالا ها
-            </h6>
-        </a>
-    </div>
-
     
     <div class="col-6 col-md-3 col-lg-2 text-center my-3">
-        <a href="{% url 'accounting:brands'  %}">
-            <img src="{% static 'accounting/img/product.png' %}" width="64em" class="mb-2" alt="">
-            <h6 class="text-center">
-                برند ها
-            </h6>
-        </a>
-    </div>
-
-    <div class="col-6 col-md-3 col-lg-2 text-center my-3">
-        <a href="{% url 'accounting:services'  %}">
-            <img src="{% static 'accounting/img/pages/thumbnail/service.png' %}" width="64em" class="mb-2" alt="">
-            <h6 class="text-center">
-                خدمات
-            </h6>
-        </a>
-    </div>
-    <div class="col-6 col-md-3 col-lg-2 text-center my-3">
         <a href="{% url 'accounting:financial_years'  %}">
-            <img src="{% static 'accounting/img/invoice.png' %}" width="64em" class="mb-2" alt="">
+            <img src="{% static 'accounting/img/financialyear.png' %}" width="64em" class="mb-2" alt="">
             <h6 class="text-center">
             سال های مالی    
             </h6>
@@ -130,7 +136,7 @@
     </div>
     <div class="col-6 col-md-3 col-lg-2 text-center my-3">
         <a href="{% url 'accounting:financial_events'  %}">
-            <img src="{% static 'accounting/img/invoice.png' %}" width="64em" class="mb-2" alt="">
+            <img src="{% static 'accounting/img/financialevent.png' %}" width="64em" class="mb-2" alt="">
             <h6 class="text-center">
                 رویداد های مالی
             </h6>
@@ -139,7 +145,7 @@
 
     <div class="col-6 col-md-3 col-lg-2 text-center my-3">
         <a href="{% url 'accounting:add_financial_event'  %}">
-            <img src="{% static 'accounting/img/invoice.png' %}" width="64em" class="mb-2" alt="">
+            <img src="{% static 'accounting/img/addfinancialevent.png' %}" width="64em" class="mb-2" alt="">
             <h6 class="text-center">
                 افزودن رویداد مالی
             </h6>
@@ -159,7 +165,7 @@
     
     <div class="col-6 col-md-3 col-lg-2 text-center my-3">
         <a href="{% url 'accounting:selection'  %}">
-            <img src="{% static 'img/icons/settings.png' %}" width="64em" class="mb-2" alt="">
+            <img src="{% static 'accounting/img/select.png' %}" width="64em" class="mb-2" alt="">
             <h6 class="text-center">
                 انتخاب حساب
             </h6>
