--- a/accounting/templates/accounting/includes/add-bank-account-app/script.html
+++ b/accounting/templates/accounting/includes/add-bank-account-app/script.html
@@ -1,6 +1,8 @@
 
 <script>
     let bank_id=0
+    let person_id_for_add_bank_account_app=0
+    let person_for_add_bank_account_app={}
     // const colors_for_add_account_app = JSON.parse("{a{colors_s|escapejs}}")
 </script>
 {% if bank %}
@@ -8,15 +10,24 @@
     bank_id=parseInt("{{bank.id}}")
   </script>
 {% endif %}
+
+{% if person %}
+  <script>
+    person_for_add_bank_account_app=JSON.parse("{{person_s|escapejs}}")
+    person_id_for_add_bank_account_app=parseInt("{{person.id}}")
+  </script>
+{% endif %}
+
+
 {% include 'authentication/includes/person-app/select-script.html' %}
 {% include 'accounting/includes/account-app/select-script.html' %}
 <script>
     let add_bank_account_app = new Vue({
         el: "#add-bank-account-app",
         data: { 
-            person_category_id:0,
-            person:{},
-            person_id:0,
+            // person_category_id:0,
+            person:person_for_add_bank_account_app,
+            person_id:person_id_for_add_bank_account_app,
             priority: 100,
             type: "",
             bank_id:bank_id,
@@ -68,7 +79,7 @@
                     priority: parseInt(this.priority),
                     parent_id:0, 
                     person_id: parseInt(this.person.id),
-                    person_category_id: parseInt(this.person_category_id),
+                    // person_category_id: parseInt(this.person_category_id),
                     color: this.color,
                     bank_id: parseInt(this.bank_id),
                     shaba_no: this.shaba_no,
