--- a/accounting/templates/accounting/includes/add-bank-account-app/template.html
+++ b/accounting/templates/accounting/includes/add-bank-account-app/template.html
@@ -97,7 +97,7 @@
             </div>
 
 
-            <div class="col-md-3">
+            <!-- <div class="col-md-3">
               <div class="form-group">
                 <label for="">دسته بندی</label>
                 <select name="" id="" class="form-control" v-model="person_category_id">
@@ -111,7 +111,7 @@
                 /
                 <a target="_blank" href="{% url 'accounting:person_categories' %}"> دسته بندی ها</a>
               </div>
-            </div>
+            </div> -->
 
             <div class="col-md-3">
               <div class="form-group">
