--- a/accounting/templates/accounting/includes/person-categories-app/template.html
+++ b/accounting/templates/accounting/includes/person-categories-app/template.html
@@ -42,6 +42,9 @@
                                 حساب والد
                             </th>
                             <th>
+                                تعداد حساب
+                            </th>
+                            <th>
                                 طول کد
                             </th>
                             <th>
@@ -81,6 +84,11 @@
                                     </div>
                                 </td>
                                 <td>
+                                    <span v-text="(person_category.count_of_accounts)">
+                                    </span>
+                                </td>
+
+                                 <td>
                                     <span v-text="(person_category.code_length)">
                                     </span>
                                 </td>
