--- a/accounting/templates/accounting/index.html
+++ b/accounting/templates/accounting/index.html
@@ -61,7 +61,7 @@
 
     <div class="col-6 col-md-3 col-lg-2 text-center my-3">
         <a href="{% url 'accounting:person_accounts' %}">
-            <img src="{% static 'core/img/logo.png' %}" width="64em" class="mb-2" alt="">
+            <img src="{% static 'accounting/img/person.png' %}" width="64em" class="mb-2" alt="">
             <h6 class="text-center">
                 حساب های اشخاص
             </h6>
