--- a/accounting/templates/accounting/index.html
+++ b/accounting/templates/accounting/index.html
@@ -143,24 +143,16 @@
         </a>
     </div>
 
-    <div class="col-6 col-md-3 col-lg-2 text-center my-3">
+    <!-- <div class="col-6 col-md-3 col-lg-2 text-center my-3">
         <a href="{% url 'accounting:add_financial_event'  %}">
             <img src="{% static 'accounting/img/addfinancialevent.png' %}" width="64em" class="mb-2" alt="">
             <h6 class="text-center">
                 افزودن رویداد مالی
             </h6>
         </a>
-    </div>
+    </div> -->
 
 
-    <div class="col-6 col-md-3 col-lg-2 text-center my-3">
-        <a href="{% url 'accounting:settings'  %}">
-            <img src="{% static 'img/icons/settings.png' %}" width="64em" class="mb-2" alt="">
-            <h6 class="text-center">
-                تنظیمات
-            </h6>
-        </a>
-    </div>
 
     
     <div class="col-6 col-md-3 col-lg-2 text-center my-3">
@@ -174,6 +166,14 @@
    
 
    
+    <div class="col-6 col-md-3 col-lg-2 text-center my-3">
+        <a href="{% url 'accounting:settings'  %}">
+            <img src="{% static 'img/icons/settings.png' %}" width="64em" class="mb-2" alt="">
+            <h6 class="text-center">
+                تنظیمات
+            </h6>
+        </a>
+    </div>
 
 
 
