all invoice lines for a project

--- a/projectmanager/templates/projectmanager/includes/project-app/script.html
+++ b/projectmanager/templates/projectmanager/includes/project-app/script.html
@@ -11,3 +11,4 @@
 
 {% include "projectmanager/includes/project-edit-app/script.html" %}
 {% include "projectmanager/includes/sub-projects-app/script.html" %}
+{% include "accounting/includes/invoice-lines-app/script.html" %}
