--- a/accounting/templates/accounting/includes/invoice-lines-app/script.html
+++ b/accounting/templates/accounting/includes/invoice-lines-app/script.html
@@ -1,90 +1,72 @@
 <script>
-    let currency_coef = 1
+  let currency_coef = 1;
 
-    let tax_percent = parseInt(`{{invoice.tax_percent}}`)
-    let invoice_lines_app_data = {}
-    let invoice_lines_app_methods = {
-        calculate_sum:function(){
-            
-        }
-    }
-    let invoice_lines_for_app12=JSON.parse("{{invoice_lines_s|escapejs}}")
+  let tax_percentage = 0;
+  let invoice_lines_for_invoice_lines_app = JSON.parse("{{invoice_lines_s|escapejs}}");
+  let invoice_lines_app_data = {};
+  let invoice_lines_app_methods = {
+    calculate_sum: function () {},
+  };
 </script>
+{% if invoice %}
+
+<script>
+  tax_percentage = parseInt(`{{invoice.tax_percentage}}`);
+</script>
+{% endif %} 
 
 {% if COEF_PRICE %}
 <script>
-
-    currency_coef = parseInt("{{COEF_PRICE}}")
-
+  currency_coef = parseInt("{{COEF_PRICE}}");
 </script>
-{% endif %}
+{% endif %} 
 
-{% if add %}
 <script>
-    invoice_lines_app_data = {
-        invoice_lines: invoice_lines_for_app12,
-        tax_percentage: tax_percentage,
-    }
-    invoice_lines_app_methods = {
-        to_price: function (vall) {
-            return to_price(vall * currency_coef, "")
-        },
-        calculate_total:function(){
+  invoice_lines_app_data = {
+    invoice_lines: invoice_lines_for_invoice_lines_app,
+    tax_percentage: tax_percentage,
+  };
+  invoice_lines_app_methods = {
+    to_price: function (vall) {
+      return to_price(vall * currency_coef, "");
+    },
+    sum_total: function () {
+      let sum = 0;
+      this.invoice_lines.forEach((invoice_line) => {
+        sum +=
+          (invoice_line.quantity *
+            invoice_line.unit_price *
+            (100 - invoice_line.discount_percentage)) /
+          100;
+      });
+      return sum;
+    },
 
-        },
-        sum_total: function () {
-            let sum = 0
-            this.invoice_lines.forEach(invoice_line => {
-                sum += invoice_line.quantity * invoice_line.unit_price
+    sum_prices: function () {
+      let sum = 0;
+      this.invoice_lines.forEach((invoice_line) => {
+        sum += invoice_line.quantity * invoice_line.unit_price;
+      });
+      return sum;
+    },
 
-            })
-            return sum
-        }
-    }
-</script>
-{% else %}
+    sum_discounts: function () {
+      let sum = 0;
+      this.invoice_lines.forEach((invoice_line) => {
+        sum +=
+          (invoice_line.quantity *
+            invoice_line.unit_price *
+            invoice_line.discount_percentage) /
+          100;
+      });
+      return sum;
+    },
+  };
+</script> 
 <script>
-    invoice_lines_app_data = {
-        invoice_lines: invoice_lines_for_app12,
-        tax_percent: tax_percent,
-    }
-    invoice_lines_app_methods = {
-        to_price: function (vall) {
-            return to_price(vall * currency_coef, "")
-        },
-        sum_total: function () {
-            let sum = 0
-            this.invoice_lines.forEach(invoice_line => {
-                sum += invoice_line.quantity * invoice_line.unit_price*(100-invoice_line.discount_percentage)/100
-
-            })
-            return sum
-        },
-
-        sum_prices: function () {
-            let sum = 0
-            this.invoice_lines.forEach(invoice_line => {
-                sum += invoice_line.quantity * invoice_line.unit_price
-
-            })
-            return sum
-        },
-
-        sum_discounts: function () {
-            let sum = 0
-            this.invoice_lines.forEach(invoice_line => {
-                sum += invoice_line.quantity * invoice_line.unit_price*(invoice_line.discount_percentage)/100
-
-            })
-            return sum
-        }
-    }
-</script>
-{% endif %}
-<script>
-    let invoice_lines_app = new Vue({
-        el: "#invoice-lines-app",
-        data: invoice_lines_app_data,
-        methods: invoice_lines_app_methods,
-    })
+  let invoice_lines_app = new Vue({
+    el: "#invoice-lines-app",
+    data: invoice_lines_app_data,
+    methods: invoice_lines_app_methods,
+  });
 </script>
