--- a/accounting/templates/accounting/includes/invoice-lines-app/template.html
+++ b/accounting/templates/accounting/includes/invoice-lines-app/template.html
@@ -258,14 +258,14 @@
 
                                 </tr>
                                 {% endif %}
-                                {% if invoice.tax_percent > 0 %}
+                                {% if invoice.tax_percentage > 0 %}
 
                                 <tr>
                                     <td colspan="5">
                                         <div class="text-left">
 
                                             <span>
-                                                {{invoice.tax_percent}}
+                                                {{invoice.tax_percentage}}
                                             </span>
                                             درصد
                                             مالیات بر ارزش افزوده
