--- a/projectmanager/templates/projectmanager/project.html
+++ b/projectmanager/templates/projectmanager/project.html
@@ -48,6 +48,11 @@
       <div class="col-md-12">
         {% include "accounting/includes/invoices-app/template.html" %}
       </div>
+      
+      <div class="col-md-12">
+        {% include "accounting/includes/invoice-lines-app/template.html" %}
+      </div>
+
       <div class="col-md-12">
         {% include "projectmanager/includes/project-edit-app/template.html" %}
       </div>
