--- a/projectmanager/templates/projectmanager/includes/remote-clients-app/add-remote-client-form.html
+++ b/projectmanager/templates/projectmanager/includes/remote-clients-app/add-remote-client-form.html
@@ -243,6 +243,7 @@
 
                         {% for brand in brands %}
 
+                        
                         <option value="{{brand.id}}">{{brand.name}}</option>
                         {% endfor %}
                     </select>
@@ -252,10 +253,19 @@
 
             <div class="col-md-4">
                 <div class="form-group">
+                    <label for="">کد کالا</label>
+                    <input type="number" class="form-control" v-model="product_id">
+                </div>
+            </div>
+
+            
+            <div class="col-md-4">
+                <div class="form-group">
                     <label for="">model_name</label>
                     <input type="text" class="form-control" v-model="model_name">
                 </div>
             </div>
+
 
             <div class="col-md-4">
                 <div class="form-group">
