--- a/projectmanager/templates/projectmanager/includes/project-app/card.html
+++ b/projectmanager/templates/projectmanager/includes/project-app/card.html
@@ -22,8 +22,12 @@
             {{project.amount|to_price}} {{CURRENCY}}
         </h5>
         {% include "core/includes/page-app/card-contents.html" %}
-        <div>
+        <div class="my-2">
             <a href="{% url 'projectmanager:tree_chart' pk=project.pk %}">نمودار درختی</a>
+        </div>
+
+        <div class="my-2">
+            <a href="{% url 'projectmanager:project_guantt' pk=project.pk %}">نمودار گانت</a>
         </div>
     </div>
 </div>
