--- a/projectmanager/templates/projectmanager/project.html
+++ b/projectmanager/templates/projectmanager/project.html
@@ -1,13 +1,10 @@
 {% extends "projectmanager/layout.html" %} {% block content %}
+    {% if project.parent %} 
+    <div class="rtl my-2">{{project.parent.get_breadcrumb|safe}}</div>
+    {% endif %} 
 <div class="row rtl">
-  <div class="col-md-3">
-      {% if project.parent %}
-          
-        <div>
-            {{project.parent.get_breadcrumb|safe}}
-        </div>
-        {% endif %}
-    {% include "projectmanager/includes/project-app/card.html" %}
+  <div class="col-md-3"> 
+    {% include "projectmanager/includes/project-app/card.html" %} 
     {% include "core/includes/page-thumbnail-header-app/template.html" %}
   </div>
   <div class="col-md-9">
@@ -37,8 +34,6 @@
         {% include "attachments/includes/locations-app/template.html" %}
       </div>
 
-
-
       {% if add_invoice_form %}
       <div class="col-md-12">
         {% include "projectmanager/includes/add-invoice-app/template.html" %}
@@ -48,7 +43,7 @@
       <div class="col-md-12">
         {% include "accounting/includes/invoices-app/template.html" %}
       </div>
-      
+
       <div class="col-md-12">
         {% include "accounting/includes/invoice-lines-app/template.html" %}
       </div>
@@ -63,10 +58,8 @@
       <div class="col-md-12">
         {% include "core/includes/page-related-app/template.html" %}
       </div>
-
     </div>
   </div>
-
 </div>
 
 {% endblock content %} {% block script %}
@@ -75,6 +68,4 @@
   let project = "{{project_s|escapejs}} ";
 </script>
 
-{% include "projectmanager/includes/project-app/script.html" %}
-
-{% endblock script %}
+{% include "projectmanager/includes/project-app/script.html" %} {% endblock script %}
