--- a/accounting/templates/accounting/includes/brands-app/template.html
+++ b/accounting/templates/accounting/includes/brands-app/template.html
@@ -47,7 +47,7 @@
                   <a :href="brand.get_absolute_url">
                     <div class="media">
                       <img
-                        :src="brand.thumbnail"
+                        :src="brand.logo"
                         width="48"
                         class="rounded"
                         alt=""
