--- a/accounting/templates/accounting/includes/product-app/card-contents.html
+++ b/accounting/templates/accounting/includes/product-app/card-contents.html
@@ -20,6 +20,16 @@
   مدل : {{product.model}}
 </h5>
 {% endif %}
+
+
+{% if product.barcode %}
+  
+<h5>
+  بارکد : {{product.barcode}}
+  
+</h5>
+{% endif %}
+
 {% for spec in product.productspecification_set.all %}
 <div>
   {{spec.name}} : {{spec.value}}
