qrcode for printed invoice

--- a/accounting/templates/accounting/invoice-print.html
+++ b/accounting/templates/accounting/invoice-print.html
@@ -111,6 +111,9 @@
       </div>
     </div>
   </div>
+  <div class="col-12 rtl text-right">
+    <img src="{{invoice.get_qrcode_url}}" width="128" alt="">
+  </div>
 </div>
 {% endblock content %}
 {% block script %}
